# ROS-codes

catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/image/: build.cmake.010.log.stderr
catkin_ws/logs/pack1/: build.make.005.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.020.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr
catkin_ws/logs/pic/: build.check.005.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.006.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.059.log.stderr  build.make.066.log.stderr  build.make.069.log.stderr  build.make.072.log.stderr  build.make.074.log.stderr  build.make.082.log.stderr  build.make.090.log.stderr  build.make.091.log.stderr  build.make.092.log.stderr  build.make.093.log.stderr  build.make.094.log.stderr  build.make.095.log.stderr  build.make.096.log.stderr  build.make.097.log.stderr  build.make.098.log.stderr  build.make.107.log.stderr  build.make.109.log.stderr  build.make.110.log.stderr  build.make.111.log.stderr  build.make.112.log.stderr  build.make.114.log.stderr  build.make.115.log.stderr  build.make.116.log.stderr  build.make.117.log.stderr  build.make.120.log.stderr  build.make.123.log.stderr  build.make.128.log.stderr  build.make.130.log.stderr  build.make.133.log.stderr  build.make.149.log.stderr  (+23 more)
catkin_ws/logs/qt_task/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.symlink.000.log.stderr  build.symlink.001.log.stderr  build.symlink.002.log.stderr  build.symlink.003.log.stderr  build.symlink.004.log.stderr  build.symlink.005.log.stderr  build.symlink.006.log.stderr  build.symlink.007.log.stderr  build.symlink.008.log.stderr  build.symlink.009.log.stderr  build.symlink.011.log.stderr  build.symlink.012.log.stderr  build.symlink.013.log.stderr  build.symlink.015.log.stderr  build.symlink.017.log.stderr
catkin_ws/logs/sample_qt/: build.check.003.log.stderr  build.check.177.log.stderr  build.check.183.log.stderr  build.check.188.log.stderr  build.check.205.log.stderr  (+21 more)
catkin_ws/src/sample_qt/: CMakeLists.txt  package.xml
catkin_ws/src/sample_qt/include/: mainwindow.h
catkin_ws/src/sample_qt/scripts/: nat_pub.py
catkin_ws/src/sample_qt/src/: .main.cpp.swp  .mainwindow.cpp.swm  .mainwindow.cpp.swn  main.cpp  mainwindow.cpp
catkin_ws/src/sample_qt/ui/: .mainwindow.ui.swp  mainwindow.ui
(+161 files in other folders)
