<?xml version="1.0"?>
<package>
  <name>sample_qt</name>
  <version>0.0.0</version>
  <description>A sample qt app to help newer members</description>
  <maintainer email="rohitsuri.nitr@gmail.com">Rohit Suri</maintainer>
  <license>BSD</license>
  <author email="rohitsuri.nitr@gmail.com">Rohit Suri</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>  

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
</package>
